[package]
name = "curve41417"
version = "0.0.1"
description = "A pure-Rust Curve41417 implementation"
license = "MIT/ASL2"
readme = "README.md"
authors = ["Sebastien Martini <seb@dbzteam.org>"]

[lib]
name = "curve41417"

[features]
# Inherited from TARS, used to disable mlock calls in heap allocations
# see TARS's Cargo.toml.
no_mlock = ["tars/no_mlock"]

[dependencies.tars]
git = "https://github.com/seb-m/tars"
